# PETs_Projects

./: .gitignore
AutoBilder/: CMakeLists.txt  main.cpp
AutoBilder/test_dir/: CMakeLists.txt  main.cpp
TeleBots/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
TeleBots/CONF/: bot_api_token.txt
TeleBots/INCL/: CMakeLists.txt  Headers.hpp  bot.hpp  bot_function.hpp  greeter.h  log.h  people.hpp
TeleBots/LIBR/: CMakelists.txt
TeleBots/LOG/: msg.json  msg_report.json
TeleBots/SRC/: bot.cpp  bot_function.cpp  log.cpp  people.cpp
